provarAnt/00D1b0000000d5bEAA/objects/FulfillmentSnapshotCases__c.object
<CustomObject>
    <description>Note: This is a Detail in a Master Detail relationship to Fulfillment Snapshot Summary.  In Software Org, this data is pulled from the Case object.</description>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addressed via New Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Worked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Feature Request Logged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Feature Request Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Feature Request Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Not valid Support Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - NR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Saved Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code and Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development (Austin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development (Integralink)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate to Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate to IT (Closed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate to Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentSnapshotPOADetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Haystak QuickView POA</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Haystak_New_Account__c</field>
                <operation>equals</operation>
                <value>Current Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FulfillmentSnapshotPOA__c</referenceTo>
        <relationshipLabel>Haystak QuickView Cases</relationshipLabel>
        <relationshipName>Fulfillment_Snapshot_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Snapshot_Name__c</fullName>
        <label>Haystak QuickView</label>
        <referenceTo>FulfillmentSnapshotSummary__c</referenceTo>
        <relationshipLabel>Haystak QuickView Cases</relationshipLabel>
        <relationshipName>Fulfillment_Snapshot_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Haystak_New_Account__c</fullName>
        <label>Haystak New Account?</label>
        <picklist>
            <picklistValues>
                <fullName>New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment__c</fullName>
        <label>Last Case Comment</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <label>Haystak QuickView Cases</label>
    <nameField>
        <label>Haystak QuickView Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Haystak QuickView Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>